# game-of-tag

./: .gitignore  CMakeLists.txt  README.md  bottompanel.cpp  bottompanel.h  common.h  datacontainer.cpp  datacontainer.h  fieldbutton.cpp  fieldbutton.h  gamefield.cpp  gamefield.h  main.cpp  savefile.cpp  savefile.h  toppanel.cpp  toppanel.h
utils/: json.c  json.h
